--- a/Documentation/devicetree/bindings/spi/fsl,spi-fsl-qspi.yaml
+++ b/Documentation/devicetree/bindings/spi/fsl,spi-fsl-qspi.yaml
@@ -55,6 +55,12 @@ properties:
       - const: qspi_en
       - const: qspi
 
+  optional properties:
+      - nxp,spi-no-functional-reset: In some platforms, such as S32R45-EVB, the Macronix
+         Flash memory is only reset on POR (power on reset) and not
+         on a functional reset. This flag is used in order to keep
+         the flash memory in a proper state after a functional reset.
+
 required:
   - compatible
   - reg
@@ -64,6 +70,7 @@ required:
   - clock-names
 
 unevaluatedProperties: false
+
 
 examples:
   - |
