--- a/Documentation/devicetree/bindings/spi/fsl,spi-fsl-qspi.yaml
+++ b/Documentation/devicetree/bindings/spi/fsl,spi-fsl-qspi.yaml
@@ -22,7 +22,10 @@ properties:
           - fsl,imx6ul-qspi
           - fsl,ls1021a-qspi
           - fsl,ls2080a-qspi
-          - fsl,s32cc-qspi
+          - nxp,s32cc-qspi
+          - nxp,s32g-qspi
+          - nxp,s32g3-qspi
+          - nxp,s32r45-qspi
       - items:
           - enum:
               - fsl,ls1043a-qspi
